extracted_vulnerabilities/pair_195800_233862/vuln_report.txt
extracted_vulnerabilities/pair_195800_233862/fmtutil_vuln.c:23:23: error: There is an unknown macro here somewhere. Configuration is required. If DE_CHAR_TIMES is a macro then please configure it. [unknownMacro]
 de_dbg(c, "dpi: %.2f"DE_CHAR_TIMES"%.2f", bi->hdpi, bi->vdpi);
                      ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

